--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>
   {{title}}
 </h1>
+
+<app-donut-chart [title]="'Test'" [dataset]="[{ label: 'Abulia', count: 10 }, { label: 'Betelgeuse', count: 20 }, { label: 'Cantaloupe', count: 30 }, { label: 'Dijkstra', count: 40 }]"></app-donut-chart>
